Update configuration and logging in the ESP Bluedroid project
- Added ESP_IDF_VERSION and ESP_IDF_PATH_ISSUES to .cargo/config.toml
- Updated .gitignore to include .data directory
- Enhanced launch.json with probe-rs-debug configurations for flashing and attaching
- Added 'anyhow' dependency in Cargo.toml and Cargo.lock
- Modified main.rs to include a loop for logging messages every second

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,42 @@
       "MIMode": "gdb",
       "miDebuggerPath": "${userHome}/.espressif/tools/xtensa-esp32s3-elf/esp-2021r2-patch3-8.4.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gdb",
       "miDebuggerServerAddress": "localhost:3333"
+    },
+    {
+      "type": "probe-rs-debug",
+      "request": "launch",
+      "name": "Launch",
+      "cwd": "${workspaceFolder}",
+      "chip": "esp32s3",
+      "speed": 100,
+      "flashingConfig": {
+        "flashingEnabled": true,
+        "haltAfterReset": true,
+        "formatOptions": {
+          "binaryFormat": "idf"
+        }
+      },
+      "coreConfigs": [
+        {
+          "coreIndex": 0,
+          "programBinary": "target/xtensa-esp32s3-espidf/debug/${workspaceFolderBasename}",
+          "svdFile": "${workspaceFolder}/.data/esp32s3.svd"
+        }
+      ]
+    },
+    {
+      "type": "probe-rs-debug",
+      "request": "attach",
+      "name": "Attach",
+      "cwd": "${workspaceFolder}",
+      "chip": "esp32s3",
+      "coreConfigs": [
+        {
+          "coreIndex": 0,
+          "programBinary": "target/xtensa-esp32s3-espidf/debug/${workspaceFolderBasename}",
+          "svdFile": "${workspaceFolder}/.data/esp32s3.svd"
+        }
+      ]
     }
   ]
 }
