--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,3 +14,6 @@ MCU = "esp32s3"
 # Note: this variable is not used by the pio builder (`cargo build --features pio`)
 ESP_IDF_VERSION = "v5.3.2"
 ESP_IDF_PATH_ISSUES = "warn"
+
+[target.'cfg(any(target_arch = "riscv32", target_arch = "xtensa"))']
+runner = "probe-rs run --chip esp32s3"
