--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 resolver = "2"
 rust-version = "1.85"
 
-
 [[bin]]
 name = "esp-bluedroid"
 harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
@@ -26,6 +25,7 @@ experimental = ["esp-idf-svc/experimental"]
 [dependencies]
 log = "0.4"
 esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
+anyhow = "1.0.97"
 
 [build-dependencies]
 embuild = "0.33"
