--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,10 @@ experimental = ["esp-idf-svc/experimental"]
 
 [dependencies]
 log = "0.4"
-esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
+esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync", "experimental"] }
 anyhow = "1.0.97"
+heapless = "0.8.0"
+enumset = "1.1.5"
 
 [build-dependencies]
 embuild = "0.33"
