--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ heapless = "0.8.0"
 enumset = "1.1.5"
 serde = "1.0.219"
 bincode = {version = "2.0.1", features = ["serde"]}
+crossbeam-channel = "0.5.15"
 
 [build-dependencies]
 embuild = "0.33"
