Add esp-bluedroid-cli crate with initial implementation and update workspace configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.85"
 
 [workspace]
 members = [
-    ".",
+    ".", "crates/esp-bluedroid-cli",
     "crates/esp-bluedroid-logger"
 , "crates/esp-bluedroid-ota"]
 
