--- a/crates/esp-bluedroid-logger/Cargo.toml
+++ b/crates/esp-bluedroid-logger/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+esp-bluedroid = { path = "../.." }
+serde = "1.0.219"
+log = "0.4"
+anyhow = "1.0.97"
+libc = "0.2.172"
