Refactor Cargo.toml and main.rs; add sdkconfig.defaults
- Removed custom profile settings from Cargo.toml for release and development builds.
- Updated imports in main.rs to streamline attribute usage and added BleLoggerService.
- Registered the logger service correctly in the BLE application.
- Introduced sdkconfig.defaults to configure ESP-IDF settings, including increased main task stack size and Bluetooth configurations.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ members = [
     "crates/esp-bluedroid-cli",
     "crates/esp-bluedroid-logger",
     "crates/esp-bluedroid-ota",
+    "example-app",
 ]
-
 
 [profile.release]
 opt-level = "s"
