Add configuration files and dependencies for ESP32 project; implement build script and logger service

--- a/example-app/Cargo.toml
+++ b/example-app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "general"
+name = "example-app"
 version = "0.1.0"
 edition = "2024"
 resolver = "2"
@@ -13,16 +13,7 @@ experimental = ["esp-idf-svc/experimental"]
 [dependencies]
 esp-bluedroid = { path = ".." }
 esp-bluedroid-logger = { path = "../crates/esp-bluedroid-logger" }
-esp-idf-svc = { version = "0.51", features = [
-    "critical-section",
-    "embassy-time-driver",
-    "embassy-sync",
-    "experimental",
-] }
+esp-idf-svc = { version = "0.51", features = ["experimental"] }
 serde = "1.0.219"
 log = "0.4"
 anyhow = "1.0.97"
-
-
-[build-dependencies]
-embuild = "0.33"
