--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,6 @@ enumset = "1.1.5"
 serde = "1.0.219"
 bincode = { version = "2.0.1", features = ["serde"] }
 crossbeam-channel = "0.5.15"
+
+[build-dependencies]
+embuild = "0.33"
