Add crossbeam and lazy_static dependencies; implement logger service with thread handling in example app

--- a/example-app/Cargo.toml
+++ b/example-app/Cargo.toml
@@ -17,3 +17,6 @@ esp-idf-svc = { version = "0.51", features = ["experimental"] }
 serde = "1.0.219"
 log = "0.4"
 anyhow = "1.0.97"
+
+[build-dependencies]
+embuild = "0.33"
