--- a/example-app/Cargo.toml
+++ b/example-app/Cargo.toml
@@ -6,7 +6,9 @@ resolver = "2"
 rust-version = "1.85"
 
 [features]
-default = []
+default = ["experimental", "esp-idf"]
+esp-bluedroid = []
+esp-idf = []
 
 experimental = ["esp-idf-svc/experimental"]
 
@@ -17,6 +19,8 @@ esp-idf-svc = { version = "0.51", features = ["experimental"] }
 serde = "1.0.219"
 log = "0.4"
 anyhow = "1.0.97"
+enumset = "1.1.6"
+heapless = "0.8.0"
 
 [build-dependencies]
 embuild = "0.33"
