Enhance example application: add hello_world module and update Cargo.toml features

--- a/example-app/Cargo.toml
+++ b/example-app/Cargo.toml
@@ -6,9 +6,10 @@ resolver = "2"
 rust-version = "1.85"
 
 [features]
-default = ["experimental", "esp-idf"]
+default = ["experimental", "esp-bluedroid"]
 esp-bluedroid = []
 esp-idf = []
+esp-hello-world = []
 
 experimental = ["esp-idf-svc/experimental"]
 
