--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,11 @@ members = [
 ]
 
 [profile.release]
-opt-level = "s"
+opt-level = 'z'
+lto = true
+codegen-units = 1
+panic = 'abort'
+strip = true
 
 [profile.dev]
 debug = true    # Symbols are nice and they don't increase the size on Flash
